--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
     <title>Lauren's Personality</title>
 </header>
 
-<h1>Lauren's Personality Type</h1>
-<h2>ISTJ-A Logistician Description</h2>
+<h1>ISTJ Personality Type</h1>
+
+<img src="https://pbs.twimg.com/profile_images/378800000431422736/3f55b5798cf87cfcab60243fbc7dab9d_400x400.jpeg" alt="ISTJ">
 <body>
     <p>The 'Logistician' personality type's defining characteristics are integrity, practical logic, and tireless dedication to duty.</p>
-<h3>Strengths</h3>
-<ul>
+
+<h3>STRENGTHS</h3>
+<ul type="square">
     <li>Honest & Direct</li>
     <li>Strong-willed & Dutiful</li>
     <li>Very Responsible</li>
     <li>Calm & Practical</li>
 </ul>
 
-<h3>Weaknesses</h3>
-<ul>
+<h3>WEAKNESSES</h3>
+<ul type="square">
     <li>Stubborn</li>
     <li>Insensitive</li>
     <li>Always by the Book</li>
@@ -30,13 +32,20 @@
 
 </ul>
 
-<h3>Things to Know About Communicating With Me</h3>
-<ul>
+<h3>THINGS TO KNOW ABOUT ME</h3>
+<ul type="square">
     <li>I like to have a plan</li>
     <li>I like a combination of written and verbal communication</li>
     <li>I tend to be a visual person when discussing something that's unfamiliar</li>
     <li>I tend to be more of a listener than a talker</li>
     <li>I work best when I'm in a partially structured environment</li>
+</ul>
+
+<h3>CELEBRITIES WITH ISTJ PERSONALITIES</h3>
+<ul type="square">
+    <li>Warren Buffett</li>
+    <li>Natalie Portman</li>
+    <li>Sting</li>
 </ul>
 </body>
 </html>
